[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Font Resources/Wendy-10.tres" type="DynamicFont" id=1]
[ext_resource path="res://AI/Editor/AI_Editor.gd" type="Script" id=2]

[node name="ReferenceRect" type="ReferenceRect"]
margin_right = 256.0
margin_bottom = 256.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 3116.01 ]
}

[node name="BASE_BUTTON" type="Button" parent="."]
visible = false
margin_left = 2.0
margin_top = 71.0
margin_right = 52.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 1 )
text = "New_State"
flat = true

[node name="BASE_REMOVABLE_BUTTON" type="HBoxContainer" parent="."]
visible = false
margin_left = 11.0
margin_top = 101.0
margin_right = 81.0
margin_bottom = 116.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BASE_BUTTON" type="Button" parent="BASE_REMOVABLE_BUTTON"]
margin_right = 50.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "New_State"
flat = true
align = 0

[node name="REMOVE_BUTTON" type="Button" parent="BASE_REMOVABLE_BUTTON"]
margin_left = 54.0
margin_right = 70.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "-"
flat = true

[node name="TYPE_PROVIDER" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="INT" type="HBoxContainer" parent="TYPE_PROVIDER"]
margin_right = 92.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyField" type="Label" parent="TYPE_PROVIDER/INT"]
margin_top = 7.0
margin_right = 54.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Property_Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueField" type="SpinBox" parent="TYPE_PROVIDER/INT"]
margin_left = 58.0
margin_right = 132.0
margin_bottom = 24.0
min_value = -100.0
rounded = true
allow_greater = true
allow_lesser = true

[node name="REAL" type="HBoxContainer" parent="TYPE_PROVIDER"]
margin_right = 92.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyField" type="Label" parent="TYPE_PROVIDER/REAL"]
margin_top = 7.0
margin_right = 54.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Property_Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueField" type="SpinBox" parent="TYPE_PROVIDER/REAL"]
margin_left = 58.0
margin_right = 132.0
margin_bottom = 24.0
min_value = -100.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="BOOL" type="HBoxContainer" parent="TYPE_PROVIDER"]
margin_right = 92.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyField" type="Label" parent="TYPE_PROVIDER/BOOL"]
margin_top = 7.0
margin_right = 54.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Property_Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="TYPE_PROVIDER/BOOL"]
margin_left = 58.0
margin_right = 82.0
margin_bottom = 24.0
keep_pressed_outside = true

[node name="Main" type="Control" parent="."]
visible = false
margin_right = 128.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Main"]
margin_left = 6.0
margin_top = 4.0
margin_right = 48.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "AI Behaviour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 109.934
margin_top = 101.541
margin_right = 149.934
margin_bottom = 141.541
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewBehaviourButton" type="Button" parent="Main/VBoxContainer"]
margin_right = 40.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "New"
flat = true

[node name="Behaviour" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Behaviour"]
margin_left = 18.3021
margin_top = 14.3484
margin_right = 228.302
margin_bottom = 46.3484
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Behaviour/VBoxContainer"]
margin_right = 210.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 1 )
text = "Behaviour Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Behaviour/VBoxContainer"]
margin_top = 13.0
margin_right = 210.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )

[node name="StatesTitle" type="Label" parent="Behaviour"]
margin_left = 20.7885
margin_top = 60.1839
margin_right = 54.7885
margin_bottom = 69.1839
custom_fonts/font = ExtResource( 1 )
text = "AI States:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddStateButton" type="Button" parent="Behaviour"]
margin_left = 195.965
margin_top = 59.1862
margin_right = 217.965
margin_bottom = 74.1862
custom_fonts/font = ExtResource( 1 )
text = "[+]"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Behaviour"]
margin_left = 5.0
margin_top = 101.0
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Behaviour/ScrollContainer"]
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="State" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="State"]
margin_left = 204.302
margin_right = 254.302
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "<-"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BehaviourLabel" type="Label" parent="State"]
margin_left = 18.0
margin_top = 3.0
margin_right = 106.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 1 )
text = "Behaviour Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="State"]
margin_left = 18.3021
margin_top = 14.3484
margin_right = 228.302
margin_bottom = 46.3484
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="State/VBoxContainer"]
margin_right = 210.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 1 )
text = "State Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="State/VBoxContainer"]
margin_top = 13.0
margin_right = 210.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )

[node name="ActionsLabel" type="Label" parent="State"]
margin_left = 11.0
margin_top = 80.0
margin_right = 47.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )
text = "AI Actions:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionsLabel" type="Label" parent="State"]
margin_left = 142.685
margin_top = 80.0
margin_right = 178.685
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )
text = "AI Transitions:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddActionButton" type="Button" parent="State"]
margin_left = 98.2049
margin_top = 77.1652
margin_right = 120.205
margin_bottom = 92.1652
custom_fonts/font = ExtResource( 1 )
text = "[+]"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddTransitionButton" type="Button" parent="State"]
margin_left = 217.965
margin_top = 77.1652
margin_right = 239.965
margin_bottom = 92.1652
custom_fonts/font = ExtResource( 1 )
text = "[+]"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionContainer" type="ScrollContainer" parent="State"]
margin_left = 6.0
margin_top = 101.0
margin_right = 128.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="State/ActionContainer"]
grow_horizontal = 2
grow_vertical = 2

[node name="TransitionContainer" type="ScrollContainer" parent="State"]
margin_left = 139.0
margin_top = 101.0
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="State/TransitionContainer"]
grow_horizontal = 2
grow_vertical = 2

[node name="Action" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="Action"]
margin_left = 195.965
margin_right = 245.965
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "Confirm"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BehaviourLabel" type="Label" parent="Action"]
margin_left = 18.0
margin_top = 3.0
margin_right = 106.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 1 )
text = "Behaviour Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateLabel" type="Label" parent="Action"]
margin_left = 18.0
margin_top = 13.0
margin_right = 106.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "State Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Action"]
margin_left = 18.0
margin_top = 23.3484
margin_right = 228.0
margin_bottom = 55.3484
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Action/VBoxContainer"]
margin_right = 210.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 1 )
text = "Action Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Action/VBoxContainer"]
margin_top = 13.0
margin_right = 210.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )

[node name="ActionsLabel" type="Label" parent="Action"]
margin_left = 11.0
margin_top = 80.0
margin_right = 47.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )
text = "Actions:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertiesLabel" type="Label" parent="Action"]
margin_left = 120.205
margin_top = 80.0
margin_right = 160.205
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )
text = "Properties:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionContainer" type="ScrollContainer" parent="Action"]
margin_left = 6.0
margin_top = 101.0
margin_right = 128.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Action/ActionContainer"]
grow_horizontal = 2
grow_vertical = 2

[node name="PropertyContainer" type="ScrollContainer" parent="Action"]
margin_left = 120.0
margin_top = 101.0
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Action/PropertyContainer"]
grow_horizontal = 2
grow_vertical = 2
